--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <SurfaceView
+        android:id="@+id/faceView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -64,19 +65,19 @@
             android:id="@+id/hairButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hair"
+            android:text="@string/hair"
             />
         <RadioButton
             android:id="@+id/eyesButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Eyes"
+            android:text="@string/eyes"
             />
         <RadioButton
             android:id="@+id/skinButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Skin"
+            android:text="@string/skin"
             />
     </LinearLayout>
 
