--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <SurfaceView
+    <com.example.assignment1_parta.Face
         android:id="@+id/faceView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
