--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,6 +61,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+        <RadioGroup
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            >
         <RadioButton
             android:id="@+id/hairButton"
             android:layout_width="wrap_content"
@@ -79,6 +84,7 @@
             android:layout_height="wrap_content"
             android:text="@string/skin"
             />
+        </RadioGroup>
     </LinearLayout>
 
     <Button
