--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
         android:id="@+id/faceView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_weight="100"
         />
 
     <!-- rgb seek bars -->
@@ -19,6 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/red"
+        android:textSize="20dp"
         />
     <SeekBar
         android:id="@+id/redBar"
@@ -30,6 +31,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/green"
+        android:textSize="20dp"
+
         />
 
     <SeekBar
@@ -41,6 +44,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/blue"
+        android:textSize="20dp"
+
         />
 
     <SeekBar
@@ -55,6 +60,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:spinnerMode="dropdown"
+
         />
     <!-- body part radio buttons -->
     <LinearLayout
